[package]
name = "hash-tree-db"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "main"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
bencher = "0.1"
bincode = "1.3"
env_logger = "0.9"
flate2 = "1.0"
jemallocator = "0.3"
log = "0.4"
rand = "0.8"
rustyline = "9.1"
structopt = "0.3"

[dependencies.nom]
version = "7.1"
default-features = false
features = [ "alloc" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]
